# Math

./: .gitignore  CMakeLists.txt  README.md
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/Tests/: Angle.cpp  Barycentric.cpp  CMakeLists.txt  Color_tests.cpp  Constexpr_tests.cpp  Matrix.cpp  Noexcept_tests.cpp  Polynomial.cpp  Range.cpp  Rectangle.cpp  Traits.cpp  Transformations_tests.cpp  Vector.cpp  VectorOfAngle.cpp  detection.h  operation_detectors.h
src/libs/: CMakeLists.txt
src/libs/math/math/: Angle.h  Barycentric.h  CMakeLists.txt  Color.h  Constants.h  Matrix.h  MatrixBase-impl.h  MatrixBase.h  MatrixTraits.h  Polynomial.h  Range.h  Rectangle.h  Transformations-impl.h  Transformations.h  Utilities.h  Vector-impl.h  Vector.h  commons.h
